--- a/.github/workflows/imswitch-docker-multiarch-noqt.yaml
+++ b/.github/workflows/imswitch-docker-multiarch-noqt.yaml
@@ -1,61 +1,90 @@
 name: imswitch-docker-multiarch-noqt
 
 on:
-  workflow_dispatch:
   push:
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  packages: write
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: openuc2/imswitch-noqt
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write    
-
+  build-arm64:
+    runs-on: ubuntu-22.04-arm
     steps:
       - name: Checkout
-        uses: actions/checkout@v4.1.0
+        uses: actions/checkout@v4
         with:
           fetch-depth: 2
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
       - name: Log in to GitHub container registry
-        uses: docker/login-action@v1.10.0
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5.0.0
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-      
-      - name: Set architecture to lowercase
-        run: echo "ARCH=$(echo ${{ runner.arch }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-      
-      - name: Print Dockerfile
-        run: cat dockerfile
-
-      - name: Build and push container image to registry
-        uses: docker/build-push-action@v2
+      - name: Build and push ARM64 image
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: dockerfile
+          platforms: linux/arm64
           push: true
-          platforms: linux/amd64,linux/arm64
-          cache-from: type=registry,ref=ghcr.io/${{ env.IMAGE_NAME }}-${{ env.ARCH }}:latest
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arm64:latest
           cache-to: type=inline
-          tags: ghcr.io/${{ env.IMAGE_NAME }}-${{ env.ARCH }}:latest
-          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arm64:latest
           build-args: |
             BUILD_DATE=${{ github.run_id }}
+  build-amd64:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Log in to GitHub container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+
+      - name: Build and push AMD64 image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: dockerfile
+          platforms: linux/amd64
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-amd64:latest
+          cache-to: type=inline
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-amd64:latest
+          build-args: |
+            BUILD_DATE=${{ github.run_id }}
+
+  create-manifest:
+    needs: [build-amd64, build-arm64]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to GitHub container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+
+      - name: Create and push multi-arch manifest
+        run: |
+          docker buildx imagetools create \
+            --tag $REGISTRY/$IMAGE_NAME:latest \
+            $REGISTRY/$IMAGE_NAME-amd64:latest \
+            $REGISTRY/$IMAGE_NAME-arm64:latest
