--- a/.github/workflows/imswitch-docker-multiarch-noqt.yaml
+++ b/.github/workflows/imswitch-docker-multiarch-noqt.yaml
@@ -11,6 +11,7 @@ permissions:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: openuc2/imswitch-noqt
+  CACHE_NAME: openuc2/imswitch-noqt-cache
 
 jobs:
   build-arm64:
@@ -26,7 +27,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ github.token }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push ARM64 image
         uses: docker/build-push-action@v4
@@ -35,11 +36,15 @@ jobs:
           file: dockerfile
           platforms: linux/arm64
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arm64:latest
-          cache-to: type=inline
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arm64:latest
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arm64:latest
+          cache-to: type=registry,mode=max,ref=${{ env.REGISTRY }}/${{ env.CACHE_NAME }}-arm64:cache
+          cache-from: |
+            type=registry,ref=${{ env.REGISTRY }}/${{ env.CACHE_NAME }}-arm64:cache
+            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arm64:latest
           build-args: |
             BUILD_DATE=${{ github.run_id }}
+
   build-amd64:
     runs-on: ubuntu-latest
     steps:
@@ -53,7 +58,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ github.token }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push AMD64 image
         uses: docker/build-push-action@v4
@@ -62,9 +67,12 @@ jobs:
           file: dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-amd64:latest
-          cache-to: type=inline
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-amd64:latest
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-amd64:latest
+          cache-to: type=registry,mode=max,ref=${{ env.REGISTRY }}/${{ env.CACHE_NAME }}-amd64:cache
+          cache-from: |
+            type=registry,ref=${{ env.REGISTRY }}/${{ env.CACHE_NAME }}-amd64:cache
+            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-amd64:latest
           build-args: |
             BUILD_DATE=${{ github.run_id }}
 
@@ -80,7 +88,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ github.token }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create and push multi-arch manifest
         run: |
