--- a/.github/workflows/imswitch-docker-multiarch-noqt.yaml
+++ b/.github/workflows/imswitch-docker-multiarch-noqt.yaml
@@ -22,6 +22,12 @@ jobs:
         with:
           fetch-depth: 2
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          install: true
+          driver: docker-container  # Ensures proper driver setup
+
       - name: Log in to GitHub container registry
         uses: docker/login-action@v2
         with:
@@ -53,6 +59,12 @@ jobs:
         with:
           fetch-depth: 2
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          install: true
+          driver: docker-container  # Ensures proper driver setup
+
       - name: Log in to GitHub container registry
         uses: docker/login-action@v2
         with:
@@ -80,8 +92,10 @@ jobs:
     needs: [build-amd64, build-arm64]
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Docker
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          install: true
 
       - name: Log in to GitHub container registry
         uses: docker/login-action@v2
