--- a/.github/workflows/imswitch-pypi.yml
+++ b/.github/workflows/imswitch-pypi.yml
@@ -17,6 +17,13 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+    - name: Extract version from tag
+      id: get_version
+      run: |
+        echo "TAG_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+    - name: Update version in imswitch/__init__.py
+      run: |
+        sed -i "s/^__version__ = .*/__version__ = '$(echo $TAG_VERSION)'/" imswitch/__init__.py
     - name: Find latest tag of dependency
       id: remote_chart
       uses: oprypin/find-latest-tag@v1
@@ -36,6 +43,6 @@ jobs:
       run: |
         python3 -m build --sdist --wheel --outdir dist/ .
     - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@master
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
