--- a/.github/workflows/imswitch-test.yml
+++ b/.github/workflows/imswitch-test.yml
@@ -33,6 +33,9 @@ jobs:
 
         python3 -m pip install --upgrade pip
         python3 -m pip install .[PyQt5]
+        python3 -m pip uninstall psygnal -y
+        python3 -m pip install psygnal --no-binary :all:
+        
         python3 -m pip install flake8 pytest pytest-qt
       shell: bash
     - name: Lint with flake8
