--- a/.github/workflows/imswitch-test.yml
+++ b/.github/workflows/imswitch-test.yml
@@ -36,7 +36,7 @@ jobs:
         python3 -m pip uninstall psygnal -y
         python3 -m pip install psygnal --no-binary :all:
         
-        python3 -m pip install flake8 pytest pytest-qt
+        python3 -m pip install flake8 pytest 
       shell: bash
     - name: Lint with flake8
       run: |
@@ -49,7 +49,7 @@ jobs:
     - name: Test with pytest
       run: |
         if [ "$RUNNER_OS" == "Linux" ]; then
-          xvfb-run --server-args "-screen 0 1920x1080x24" python3 -m pytest --pyargs imswitch -v
+          xvfb-run --server-args "-screen 0 1920x1080x24" python3 -m pytest --pyargs imswitch -v -s
         elif [ "$RUNNER_OS" == "Windows" ]; then
           # LiveView test fails on GitHub actions on Windows with napari 0.4.7. This is likely a
           # problem specific to this GitHub action, as it does not appear when testing manually on
@@ -58,13 +58,13 @@ jobs:
           # TODO: Remove this special case when napari is unpinned
           python3 -m pytest --pyargs imswitch -v \
               --ignore=imswitch/imcontrol/_test/ui/test_example_setups.py \
-              --ignore=imswitch/imcontrol/_test/ui/test_liveview.py
+              --ignore=imswitch/imcontrol/_test/ui/test_liveview.py -s
         else
           # test_example_setups.py causes "Fatal Python error: Bus error" on MacOS after all tests
           # are complete, but seemingly only in GitHub Actions and not on a "real" installation.
           # Therefore, we ignore the file on MacOS for now.
           # TODO: Figure out why this happens. Perhaps related to the Windows issue?
           python3 -m pytest --pyargs imswitch -v \
-              --ignore=imswitch/imcontrol/_test/ui/test_example_setups.py
+              --ignore=imswitch/imcontrol/_test/ui/test_example_setups.py -s
         fi
       shell: bash
