Add OpenAPI spec and update tests and launch config
Added imswtich/_data/openapi.json containing the OpenAPI 3.1.0 specification for FastAPI endpoints. Updated .vscode/launch.json to allow print statements in pytest runs. Modified test files and RecordingManager to support new or updated API features.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,7 +27,9 @@
             "request": "launch",
             "module": "pytest",
             "args": [
-                "${file}" // Runs the currently open test file
+                "${file}", // Runs the currently open test file
+                "-s", // Allows print statements to show in the terminal
+
             ],
             "console": "integratedTerminal",
             "justMyCode": false, // Ensures you can debug library code as well
