--- a/.github/workflows/imswitch-uv-test.yml
+++ b/.github/workflows/imswitch-uv-test.yml
@@ -43,19 +43,13 @@ jobs:
           if [ -f requirements-dev.txt ]; then
             uv pip install --system -r requirements-dev.txt
           else
-            uv pip install --system pytest flake8
+            uv pip install --system pytest
           fi
         shell: bash
 
       - name: Install project with uv (editable)
         run: |
           uv pip install --system -e .
-        shell: bash
-
-      - name: Lint (flake8 minimal)
-        run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --statistics --extend-exclude=imswitch/imcontrol/model/interfaces/pyicic/*
         shell: bash
 
       - name: Run tests
