--- a/.github/workflows/imswitch-test.yml
+++ b/.github/workflows/imswitch-test.yml
@@ -51,12 +51,8 @@ jobs:
         if [ "$RUNNER_OS" == "Linux" ]; then
           xvfb-run --server-args "-screen 0 1920x1080x24" python3 -m pytest --pyargs imswitch/imcontrol/_test -v -s
         elif [ "$RUNNER_OS" == "Windows" ]; then
-          # LiveView test fails on GitHub actions on Windows with napari 0.4.7. This is likely a
-          # problem specific to this GitHub action, as it does not appear when testing manually on
-          # Windows. Therefore, we ignore the LiveView tests on Windows for now.
-          # The situation is similar with test_example_setups.py, possibly for the same reason.
-          # TODO: Remove this special case when napari is unpinned
-          python3 -m pytest --pyargs imswitch/imcontrol/_test -v -s
+          python3 -m pytest imswitch/imcontrol/_test/api -v -s 
+          python3 -m pytest imswitch/imcontrol/_test/unit -v -s
         else
           # test_example_setups.py causes "Fatal Python error: Bus error" on MacOS after all tests
           # are complete, but seemingly only in GitHub Actions and not on a "real" installation.
