Update Docker setup and config handling logic
Modified Docker Compose volumes and environment variables, improved entrypoint.sh to better handle config paths and output, and switched Dockerfile to copy local ImSwitch code instead of pulling from git. Updated config and main logic to handle None config files more robustly, and improved setup file validation in imcontrol and configfiletools. Added workflow file for GitHub Actions testing.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,14 +9,15 @@ services:
       - "8888:8888"
       - "2222:22"
     volumes:
-      - /Users/bene/ImSwitchConfig/:/config
-      - /Users/bene/ImSwitchConfig/:/dataset
+      - /Users/bene:/config
+      - /Users/bene:/dataset
       - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
       - /etc/machine-id:/etc/machine-id:ro
     environment:
       - HEADLESS=1
       - HTTP_PORT=8001
-      - CONFIG_FILE=example_virtual_microscope.json
+      - HTTP_PORT=8005
+      #- CONFIG_FILE=example_virtual_microscope.json
       - UPDATE_GIT=0
       - UPDATE_CONFIG=0
       - DATA_PATH=/dataset
