--- a/.github/workflows/imswitch-docker-multiarch-noqt.yaml
+++ b/.github/workflows/imswitch-docker-multiarch-noqt.yaml
@@ -9,104 +9,148 @@ permissions:
   packages: write
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: openuc2/imswitch-noqt
-  CACHE_NAME: openuc2/imswitch-noqt-cache
+  REGISTRY: ghcr.io/${{ github.repository_owner }}
+  IMAGE_NAME: imswitch-noqt
+  CACHE_NAME: imswitch-noqt-cache
+  PUSH_IMAGE: ${{ (github.event_name == 'pull_request' && !github.event.pull_request.head.repo.fork) || github.event_name == 'push' || github.event_name == 'push tag' }}
 
 jobs:
-  build-arm64:
-    runs-on: ubuntu-22.04-arm
+  build-container-image:
+    permissions:
+      contents: read
+      packages: write
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - docker-platform: linux/amd64
+            gha-runner: ubuntu-latest
+          - docker-platform: linux/arm64
+            gha-runner: ubuntu-latest-arm
+    runs-on: ${{ matrix.gha-runner }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 2
 
+      # Work around a bug where capital letters in the GitHub username (e.g. "PlanktoScope") make it
+      # impossible to push to GHCR. See https://github.com/macbre/push-to-ghcr/issues/12
+      - name: Lowercase image registry and owner
+        id: image_registry_case
+        uses: ASzc/change-string-case-action@v6
+        with:
+          string: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      # Build and publish Docker container image
+      - name: Get Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ steps.image_registry_case.outputs.lowercase }}
+          tags: |
+            type=sha # this sha doesn't appear to correspond to the git sha
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
         with:
           install: true
           driver: docker-container  # Ensures proper driver setup
 
       - name: Log in to GitHub container registry
-        uses: docker/login-action@v2
+        if: env.PUSH_IMAGE == 'true'
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push ARM64 image
-        uses: docker/build-push-action@v4
+      - name: Build and push by digest
+        id: build
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: dockerfile
-          platforms: linux/arm64
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arm64:latest
-          cache-to: type=registry,mode=max,ref=${{ env.REGISTRY }}/${{ env.CACHE_NAME }}-arm64:cache
-          cache-from: |
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.CACHE_NAME }}-arm64:cache
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arm64:latest
+          pull: true
+          platforms: ${{ matrix.docker-platform }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha,scope=build-${{ matrix.docker-platform }}
+          cache-to: type=gha,mode=max,scope=build-${{ matrix.docker-platform }}
+          outputs: type=image,name=${{ steps.image_registry_case.outputs.lowercase }},push-by-digest=true,name-canonical=true,push=${{ env.PUSH_IMAGE }}
           build-args: |
             BUILD_DATE=${{ github.run_id }}
 
-  build-amd64:
+  merge-container-images:
+    permissions:
+      contents: read
+      packages: write
     runs-on: ubuntu-latest
+    needs:
+      - build-container-image
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Download digests
+        uses: actions/download-artifact@v4
         with:
-          fetch-depth: 2
+          path: /tmp/digests
+          pattern: digests-*
+          merge-multiple: true
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      # Work around a bug where capital letters in the GitHub username (e.g. "PlanktoScope") make it
+      # impossible to push to GHCR. See https://github.com/macbre/push-to-ghcr/issues/12
+      - name: Lowercase image registry and owner
+        id: image_registry_case
+        uses: ASzc/change-string-case-action@v6
         with:
-          install: true
-          driver: docker-container  # Ensures proper driver setup
+          string: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Log in to GitHub container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Get actual commit SHA
+        # Get the SHA of the actual commit (not the fake merge commit) on PR-triggered runs
+        # (refer to https://stackoverflow.com/a/68068674/23202949):
+        run: |
+          if [[ -n "${{ github.event.pull_request.head.sha }}" ]]; then
+            printf "ACTUAL_SHA=%.7s" "${{ github.event.pull_request.head.sha }}" >> $GITHUB_ENV
+          elif [[ ${{ env.PUSH_IMAGE }} = "true" ]]; then
+            printf "ACTUAL_SHA=%.7s" "${{ github.sha }}" >> $GITHUB_ENV
+          fi
 
-      - name: Build and push AMD64 image
-        uses: docker/build-push-action@v4
+      # Build and publish Docker container image
+      - name: Get Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        env:
+          IS_MAIN_BRANCH: ${{ github.ref == format('refs/heads/{0}', env.MAIN_BRANCH) }}
+          IS_BETA_BRANCH: ${{ github.ref == format('refs/heads/{0}', env.BETA_BRANCH) }}
+          IS_STABLE_BRANCH: ${{ github.ref == format('refs/heads/{0}', env.STABLE_BRANCH) }}
         with:
-          context: .
-          file: dockerfile
-          platforms: linux/amd64
-          push: true
+          images: ${{ steps.image_registry_case.outputs.lowercase }}
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-amd64:latest
-          cache-to: type=registry,mode=max,ref=${{ env.REGISTRY }}/${{ env.CACHE_NAME }}-amd64:cache
-          cache-from: |
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.CACHE_NAME }}-amd64:cache
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-amd64:latest
-          build-args: |
-            BUILD_DATE=${{ github.run_id }}
+            type=match,pattern=${{ env.TAG_PREFIX }}(.*),group=1 # this implicitly updates latest
+            type=raw,value=stable,enable=${{ env.IS_STABLE_BRANCH }},priority=702
+            type=raw,value=beta,enable=${{ env.IS_BETA_BRANCH }},priority=701
+            type=edge,branch=${{ env.MAIN_BRANCH }}
+            type=ref,event=pr
+            type=raw,value=sha-${{ env.ACTUAL_SHA }},enable=${{ env.ACTUAL_SHA != '' }},priority=100
 
-  create-manifest:
-    needs: [build-amd64, build-arm64]
-    runs-on: ubuntu-latest
-    steps:
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        with:
-          install: true
+        uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub container registry
-        uses: docker/login-action@v2
+      - name: Log in to GitHub Container Registry
+        if: env.PUSH_IMAGE == 'true'
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create and push multi-arch manifest
+      - name: Create manifest list and push
+        if: env.PUSH_IMAGE == 'true'
+        working-directory: /tmp/digests
         run: |
           docker buildx imagetools create \
-            --tag $REGISTRY/$IMAGE_NAME:latest \
-            $REGISTRY/$IMAGE_NAME-amd64:latest \
-            $REGISTRY/$IMAGE_NAME-arm64:latest
+            $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf '${{ steps.image_registry_case.outputs.lowercase }}@sha256:%s ' *)
+
+      - name: Inspect image
+        if: env.PUSH_IMAGE == 'true'
+        run: |
+          docker buildx imagetools inspect \
+            ${{ steps.image_registry_case.outputs.lowercase }}:${{ steps.meta.outputs.version }}
