--- a/.github/workflows/imswitch-docker-noqt.yaml
+++ b/.github/workflows/imswitch-docker-noqt.yaml
@@ -11,8 +11,13 @@ permissions:
 env:
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
   IMAGE_NAME: imswitch-noqt
-  CACHE_NAME: imswitch-noqt-cache
-  PUSH_IMAGE: ${{ (github.event_name == 'pull_request' && !github.event.pull_request.head.repo.fork) || github.event_name == 'push' || github.event_name == 'push tag' }}
+  MAIN_BRANCH: 'master' # pushing to this branch will update the "edge" tag on the image
+  # Because openUC2/ImSwitch is a fork of an upstream repo, we can't suppress attempts to push
+  # container images for forks of the openUC2/ImSwitch repo. That's is probably acceptable for how
+  # we develop this project (i.e. with PRs from branches on the openUC2/ImSwitch repo, rather than
+  # PRs from user-created forks of openUC2/ImSwitch).
+  # PUSH_IMAGE: ${{ (github.event_name == 'pull_request' && !github.event.pull_request.head.repo.fork) || github.event_name == 'push' || github.event_name == 'push tag' }}
+  PUSH_IMAGE: ${{ (github.event_name == 'pull_request') || github.event_name == 'push' || github.event_name == 'push tag' }}
 
 jobs:
   build-container-image:
