Filter branches which trigger the build workflow without a PR

--- a/.github/workflows/imswitch-docker-noqt.yaml
+++ b/.github/workflows/imswitch-docker-noqt.yaml
@@ -2,6 +2,9 @@ name: imswitch-docker-noqt
 
 on:
   push:
+    branches:
+      - 'master'
+      - 'main'
   pull_request:
   merge_group:
   workflow_dispatch:
