--- a/.github/workflows/imswitch-docker-noqt.yaml
+++ b/.github/workflows/imswitch-docker-noqt.yaml
@@ -5,6 +5,8 @@ on:
     branches:
       - 'master'
       - 'main'
+    tags:
+      - 'v*'
   pull_request:
   merge_group:
   workflow_dispatch:
@@ -13,14 +15,12 @@ on:
         description: 'Git ref (optional)'
         required: false
 
-permissions:
-  contents: read
-  packages: write
-
 env:
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
   IMAGE_NAME: imswitch-noqt
   MAIN_BRANCH: 'master' # pushing to this branch will update the "edge" tag on the image
+  BETA_BRANCH: 'beta' # pushing to this branch will update the "beta" tag on the image
+  STABLE_BRANCH: 'stable' # pushing to this branch will update the "stable" tag on the image
   TAG_PREFIX: 'v' # pushing tags with this prefix will add a version tag to the image and update the "latest" tag on the image
   # Because openUC2/ImSwitch is a fork of an upstream repo, we can't suppress attempts to push
   # container images for forks of the openUC2/ImSwitch repo. That's is probably acceptable for how
