--- a/.github/workflows/imswitch-test.yml
+++ b/.github/workflows/imswitch-test.yml
@@ -33,8 +33,8 @@ jobs:
 
         python3 -m pip install --upgrade pip
         python3 -m pip install .
-        python3 -m pip uninstall psygnal -y
-        python3 -m pip install psygnal --no-binary :all:
+        #python3 -m pip uninstall psygnal -y
+        #python3 -m pip install psygnal --no-binary :all:
         
         python3 -m pip install flake8 pytest 
       shell: bash
