--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,11 +3,8 @@ services:
     image: ghcr.io/openuc2/imswitch-noqt:latest
     privileged: true
     ports:
-      - "3000:3000"
-      - "8002:8002"
       - "8001:8001"
       - "8888:8888"
-      - "2222:22"
     volumes:
       - /Users/bene:/config
       - /Users/bene:/dataset
@@ -22,10 +19,9 @@ services:
       - UPDATE_CONFIG=0
       - DATA_PATH=/dataset
       - CONFIG_PATH=/config
-      - SCAN_EXT_DATA_FOLDER=1
-      - EXT_DRIVE_MOUNT=/media
+      - SCAN_EXT_DATA_PATH=1
+      - EXT_DATA_PATH=/media
       - SSL=1
-      - scan-ext-drive-mount=false
       - WIFI_MODE=host
 
     restart: always
