--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,15 +1,16 @@
 services:
   imswitch-docker-noqt:
-    image: ghcr.io/openuc2/imswitch-noqt:latest
+    image: imswitch-holo
     privileged: true
     ports:
       - "8001:8001"
       - "8888:8888"
     volumes:
-      - /Users/bene:/config
-      - /Users/bene:/dataset
+      - /home/pi/ImSwitchConfig:/config
+      - /home/pi/ImSwitchConfig:/dataset
       - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
       - /etc/machine-id:/etc/machine-id:ro
+      - /run/udev:/run/udev:ro
     environment:
       - HEADLESS=1
       - HTTP_PORT=8001
