Switch Docker build from conda to UV, update dependencies
Replaces conda-based Docker build scripts with UV (Rust-based package manager) for faster and more reliable builds. Updates Docker scripts, entrypoints, and documentation to use Python 3.11 and UV virtual environments. Updates minimum Python version to 3.11 in setup.py and README, and bumps several dependencies (arkitekt-next, mikro-next, koil, kabinet, fakts-next, platformdirs, numpy) in uv.lock. Removes benchmark_hologram_processing.py and fixes minor typos and instructions in documentation. Improves LiveViewController frame read logic and adds debug output to configfiletools.

--- a/.github/workflows/imswitch-bundle.yml
+++ b/.github/workflows/imswitch-bundle.yml
@@ -21,17 +21,18 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: ${{ github.ref }}
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v5
       with:
-        python-version: 3.9
+        python-version: '3.11'
+    
+    - name: Install UV
+      uses: astral-sh/setup-uv@v4
+      with:
+        version: "latest"
+    
     - name: Install dependencies
       run: |
-        # Install UV
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        source $HOME/.local/bin/uv
-        export PATH="$HOME/.local/bin:$PATH"
-        
         # Install with UV
         uv pip install --system .
         uv pip install --system pyinstaller==5.4.1
