--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,8 @@ dependencies = [
     "numba>=0.61.2", 
     "mikro-next>=0.18.0", 
     "arkitekt-next>=0.29.0", 
-    "koil>=2.0.5"    
+    "koil>=2.0.5",
+    "msgpack>=1.0.4"
 ]
 
 [project.optional-dependencies]
