--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,14 +43,12 @@ dependencies = [
     "Send2Trash >= 1.8",
     "tifffile >= 2020.11.26",
     "dask[complete] >= 2024.8.0",
-    "fastAPI >= 0.86.0",
+    "fastapi >= 0.86.0",
     "uvicorn[standard] >= 0.19.0",
     "matplotlib == 3.9.2",
     "opencv-python",
-    "dataclasses-json >= 0.5",
     "aiortc >= 1.9.0",
     "UC2-REST",
-    "tk >= 0.1.0",
     "jupyter",
     "python-multipart >= 0.0.5",
     "piexif >= 1.1.3",
@@ -91,9 +89,6 @@ Lepmont = [
 Ashlar = [
     "ashlarUC2",
 ]
-arkitekt = [
-    "arkitekt-next["all"]==0.30.1",
-]
 imjoy = [
     "imjoy-rpc==0.5.59",
     "imjoy_rpc",
@@ -118,11 +113,6 @@ include = ["imswitch*"]
 
 [tool.setuptools.package-data]
 "*" = ["*"]
-
-[dependency-groups]
-dev = [
-    "arkitekt-next["all"]==0.30.1",
-]
 
 [project.entry-points."imswitch.implugins.detectors"]
 
