Add CAN OTA update docs and improve OTA/USB flash status
Added comprehensive CAN OTA update procedure documentation. Refactored UC2ConfigController to centralize CAN ID to firmware mapping, improved OTA status tracking and frontend signaling, and added detailed USB flash status updates with new API endpoints. Updated dependencies to include esptool in pyproject.toml and setup.py.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,8 @@ dependencies = [
     "mikro-next>=0.18.0",
     "arkitekt-next[all]==0.30.1",
     "koil>=2.0.5",
-    "msgpack>=1.0.4"
+    "msgpack>=1.0.4", 
+    "esptool"
 ]
 
 [project.optional-dependencies]
