--- a/.github/workflows/imswitch-test.yml
+++ b/.github/workflows/imswitch-test.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -17,13 +16,15 @@ jobs:
         python-version: ["3.11", "3.12"]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with:
         ref: ${{ github.ref }}
+        
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        
     - name: Install dependencies
       run: |
         if [ "$RUNNER_OS" == "Linux" ]; then
@@ -33,11 +34,9 @@ jobs:
 
         python3 -m pip install --upgrade pip
         python3 -m pip install .
-        #python3 -m pip uninstall psygnal -y
-        #python3 -m pip install psygnal --no-binary :all:
-        
-        python3 -m pip install ruff pytest 
+        python3 -m pip install ruff pytest
       shell: bash
+      
     - name: Lint with ruff
       run: |
         # Check for critical errors that should fail the build
@@ -47,19 +46,21 @@ jobs:
         # Run all configured checks (exit-zero treats all errors as warnings)
         ruff check . --exit-zero --output-format=full
       shell: bash
-    - name: Test with pytest
+      
+    - name: Run Unit Tests
       run: |
+        # Run unit tests using --pyargs to find the installed package
+        # The -p no:arkitekt_next disables the arkitekt pytest plugin which requires arkitekt_server
+        # Note: pytest.ini already configures this, but we add it explicitly for clarity
         if [ "$RUNNER_OS" == "Linux" ]; then
-          xvfb-run --server-args "-screen 0 1920x1080x24" python3 -m pytest --pyargs imswitch/imcontrol/_test -v -s
-        elif [ "$RUNNER_OS" == "Windows" ]; then
-          python3 -m pytest imswitch/imcontrol/_test/api -v -s 
-          python3 -m pytest imswitch/imcontrol/_test/unit -v -s
+          xvfb-run --server-args "-screen 0 1920x1080x24" python3 -m pytest \
+            --pyargs imswitch.imcontrol._test.unit \
+            -p no:arkitekt_next \
+            -v --tb=short
         else
-          # test_example_setups.py causes "Fatal Python error: Bus error" on MacOS after all tests
-          # are complete, but seemingly only in GitHub Actions and not on a "real" installation.
-          # Therefore, we ignore the file on MacOS for now.
-          # TODO: Figure out why this happens. Perhaps related to the Windows issue?
-          python3 -m pytest imswitch/imcontrol/_test/api -v -s 
-          python3 -m pytest imswitch/imcontrol/_test/unit -v -s
+          python3 -m pytest \
+            --pyargs imswitch.imcontrol._test.unit \
+            -p no:arkitekt_next \
+            -v --tb=short
         fi
       shell: bash
