Remove distracting & useless `imswitch-` prefixes from CI workflow names

--- a/.github/workflows/bump-and-publish-pypi.yml
+++ b/.github/workflows/bump-and-publish-pypi.yml
@@ -1,4 +1,4 @@
-name: Auto Version Bump and PyPI Release
+name: bump-and-publish-pypi
 
 # This workflow automatically bumps the patch version and creates a git tag
 # when code is pushed to the master branch. The existing imswitch-pypi.yml workflow
