--- a/pytest.ini
+++ b/pytest.ini
@@ -12,7 +12,7 @@ addopts = -p no:arkitekt_next -v --tb=short
 # Or run from project root with: pytest imswitch/imcontrol/_test/unit
 
 # Python patterns
-python_files = ["test_*.py", "__init__.py"]
+python_files = __init__.py test_*.py
 python_classes = Test*
 python_functions = test_*
 
