Improve mock camera, OTA UI, timing and defaults
Multiple changes to improve robustness, reduce polling, and refine defaults:

- CI: Run pytest directly from source directory instead of using --pyargs to locate package.
- Frontend timing: Increase polling intervals to reduce CPU/load (ActiveStorageInfo: 10s -> 30s, StorageButton scanInterval: 10s -> 60s, ConfigurationWizard checkStatus delay: 5s -> 15s).
- CanOtaWizard: Add logging and UI/UX improvements: auto-select manually added CAN devices, auto-select on step transition, debug logs for transitions and validation, show manual CAN list warning, display device type chips, show warning while updating and adjust dialog actions to allow canceling updates safely.
- LiveViewController: Guard against None frames from capture and skip processing with a warning to avoid crashes.
- PositionerController: More robust default selection when positionerName is missing/invalid and reformat doHome call for readability.
- Mock camera (tiscamera_mock.py): Major refactor and feature additions — timestamped synthetic frames, FPS throttling, pull synthesis when buffer empty, reusable scratch buffers to avoid allocations, safer thread lifecycle, improved mock types handling and dtype normalization, moved some imports locally. Overall makes headless testing more deterministic and CPU-friendly.
- ESP32StageManager: Change default endposrelease values from 1 to 0 and remove/clean up hard-limits handling and related root key to simplify behavior.
- pyproject.toml: Add setuptools >= 42 to dependencies.

These edits aim to improve stability, reduce resource usage during polling and mocks, and make OTA and positioner behavior more predictable.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ classifiers = [
 dynamic = ["version"]
 requires-python = ">=3.11"
 dependencies = [
+    "setuptools >= 42",
     "pydantic==2.11.4",
     "coloredlogs >= 15",
     "colour-science >= 0.3",
