--- a/.github/workflows/test-uv.yml
+++ b/.github/workflows/test-uv.yml
@@ -104,17 +104,17 @@ jobs:
 
       - name: Run Unit Tests
         run: |
-          # Run unit tests using --pyargs to find the installed package
+          # Run unit tests directly from source directory
           # The -p no:arkitekt_next disables the arkitekt pytest plugin which requires arkitekt_server
           # Note: pytest.ini already configures this, but we add it explicitly for clarity
           if [ "$RUNNER_OS" == "Linux" ]; then
             xvfb-run --server-args "-screen 0 1920x1080x24" python3 -m pytest \
-              --pyargs imswitch.imcontrol._test.unit \
+              imswitch/imcontrol/_test/unit \
               -p no:arkitekt_next \
               -v --tb=short
           else
             python3 -m pytest \
-              --pyargs imswitch.imcontrol._test.unit \
+              imswitch/imcontrol/_test/unit \
               -p no:arkitekt_next \
               -v --tb=short
           fi
